--- a/source/css/_partial/highlight.styl
+++ b/source/css/_partial/highlight.styl
@@ -1,16 +1,16 @@
 // https://github.com/chriskempson/tomorrow-theme
-highlight-background = #2d2d2d
-highlight-current-line = #393939
-highlight-selection = #515151
-highlight-foreground = #cccccc
-highlight-comment = #999999
-highlight-red = #f2777a
-highlight-orange = #f99157
-highlight-yellow = #ffcc66
-highlight-green = #99cc99
-highlight-aqua = #66cccc
-highlight-blue = #6699cc
-highlight-purple = #cc99cc
+highlight-background = #272822
+highlight-current-line = #3E3D32
+highlight-selection = #49483E
+highlight-foreground = #F8F8F2
+highlight-comment = #75715E
+highlight-red = #F92672
+highlight-orange = #FD971F
+highlight-yellow = #E6DB74
+highlight-green = #A6E22E
+highlight-aqua = #A1EFE4
+highlight-blue = #66D9EF
+highlight-purple = #AE81FF
 
 $code-block
   background: highlight-background
