--- a/source/css/_partial/footer.styl
+++ b/source/css/_partial/footer.styl
@@ -1,17 +1,75 @@
-footer
-  width: auto !important
-  position: relative !important
 #footer
-  background: color-footer-background
-  padding: 50px 0
-  border-top: 1px solid color-border
-  color: color-grey
-  a
-    color: color-link
-    text-decoration: none
-    &:hover
-      text-decoration: underline
+  width: 100%;
+  min-height: 1px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  
+  div.primary
+    width: 100%;
+
+  .rel
+    position: relative;
+
+  div.wrap
+    height: 2000px;
+    margin: 0 auto;
+    overflow: hidden;
+    text-align: left;
+    padding: 0 20px;
+    position: relative;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 
 #footer-info
   line-height: line-height
   font-size: 0.85em
+
+.footer-shards
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+  
+  div.light
+    width: 6000px;
+    height: 1200px;
+    position: absolute;
+    bottom: -362px;
+    right: -105px;
+    z-index: 12;
+    background: #f0f0f0;
+    -webkit-transform: rotate(15deg);
+    -moz-transform: rotate(15deg);
+    -ms-transform: rotate(15deg);
+    transform: rotate(15deg);
+  
+  div.colored
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    bottom: -140px;
+    right: -35px;
+    z-index: 12;
+    background: #29e5b7;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+
+  div.dark
+    width: 2000px;
+    height: 2000px;
+    position: absolute;
+    bottom: -899px;
+    right: -2349px;
+    z-index: 12;
+    background: #222c37;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+
