--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -111,16 +111,18 @@ $nav-link
   &:before
     content: "\f09e"
 
-#nav-search-btn
+#nav-search-btn, #m-nav-search-btn
   &:before
     content: "\f002"
+
+
 
 #search-form-wrap
   position: absolute
   top: 25px
   width: 150px
   height: 30px
-  right: -150px
+  right: 150px
   opacity: 0
   transition: 0.2s ease-out
   &.on
@@ -129,6 +131,21 @@ $nav-link
   @media mq-mobile
     width: 100%
     right: -100%
+
+#m-search-form-wrap
+  position: absolute;
+  top: 9px;
+  width: 150px;
+  height: 30px;
+  right: 150px;
+  opacity: 0;
+  -webkit-transition: 0.2s ease-out;
+  -moz-transition: 0.2s ease-out;
+  -ms-transition: 0.2s ease-out;
+  transition: 0.2s ease-out;
+  &.on
+    opacity: 1
+    right: 10px
 
 .search-form
   position: absolute
