--- a/source/css/_partial/sidebar-aside.styl
+++ b/source/css/_partial/sidebar-aside.styl
@@ -12,13 +12,12 @@
   color: color-sidebar-text
   text-shadow: 0 1px #fff
   background: color-widget-background
-  box-shadow: 0 -1px 4px color-widget-border inset
-  border: 1px solid color-widget-border
   padding: 15px
-  border-radius: 3px
   a
-    color: color-link
-    text-decoration: none
+    color: #ff0066
+    text-decoration: underline;
+    outline: none;
+    cursor: pointer;
     &:hover
       text-decoration: underline
   ul, ol, dl
