--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -7,9 +7,9 @@ color-default = #555
 color-grey = #999
 color-border = #ddd
 color-link = #258fb8
-color-background = #eee
+color-background = #fff
 color-sidebar-text = #777
-color-widget-background = #ddd
+color-widget-background = #f0f0f0
 color-widget-border = #ccc
 color-footer-background = #262a30
 color-mobile-nav-background = #191919
