--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -1,18 +1,19 @@
 <% function menu(name) { %>
 <li class="menu-363">
-    <% if(name == "Home") { %>
-    <a href="<%- config.root %>" class="<% if(config.root + "/" == url_for(page.path)) { %>
+    <% if(name === "Home") { %>
+    <a href="<%- config.root %>" class="<% if(url_for(config.root) == url_for(page.path).replace("//","/")) { %>
             active-trail active
             <% } %>
             ">Home</a>
     <% } else { %>
     <a href="<%- config.root + name.toLowerCase() %>" class="
-            <% if(config.root + name.toLowerCase() + "/" == url_for(page.path)) { %>
-            active-trail active
+            <% if(is_current(name.toLowerCase())) { %>
+            <!--active-trail active-->
             <% } %>
 "><%- name %></a>
+    <% } %>
 </li>
-<% }} %>
+<% } %>
 
 <header id="section-header" class="section section-header">
     <div class="header-wrapper no-userinfo" style=" ">
@@ -33,7 +34,7 @@
                 </ul>
                 <div id="sub-nav-hexo">
                     <% if (theme.rss){ %>
-                    <a id="nav-rss-link" class="nav-icon" href="<%- theme.rss %>" title="RSS Feed"></a>
+                    <a id="nav-rss-link" class="nav-icon" href="<%- config.root + theme.rss %>" title="RSS Feed"></a>
                     <% } %>
                     <a id="nav-search-btn" class="nav-icon" title="Search"></a>
 
@@ -48,7 +49,7 @@
                 <div class="sub-fill"></div>
                 <ul class="secondary-menu">
                     <li class="menu-383 first">
-                        <a href="/" title="">Test</a>
+                        <a href="<%- config.root %>" title="">Test</a>
                     </li>
                 </ul>
                 <script> var submore = 'More'; </script>
@@ -60,7 +61,7 @@
     <div class="m-logo"><a href="/"></a></div>
     <div id="m-sub-nav-hexo">
         <% if (theme.rss){ %>
-        <a id="nav-rss-link" class="nav-icon" href="<%- theme.rss %>" title="RSS Feed"></a>
+        <a id="nav-rss-link" class="nav-icon" href="<%- config.root + theme.rss %>" title="RSS Feed"></a>
         <% } %>
         <a id="m-nav-search-btn" class="nav-icon" title="Search"></a>
 
