--- a/source/css/_partial/highlight.styl
+++ b/source/css/_partial/highlight.styl
@@ -27,19 +27,19 @@ $line-numbers
   font-size: 0.85em
 
 .article-entry
-  pre, code
-    font-family: font-mono
-  code
-    background: color-background
-    text-shadow: 0 1px #fff
-    padding: 0 0.3em
-  pre
-    @extend $code-block
+  figure.highlight
+    pre, code
+      font-family: font-mono
+    code
+      background: color-background
+      text-shadow: 0 1px #fff
+      padding: 0 0.3em
+    pre
+      @extend $code-block
     code
       background: none
       text-shadow: none
       padding: 0
-  .highlight
     @extend $code-block
     pre
       border: none
@@ -66,43 +66,11 @@ $line-numbers
     .line
       height: font-size * line-height
   .gist
-    margin: 0 article-padding * -1
-    border-style: solid
-    border-color: color-border
-    border-width: 1px 0
-    background: highlight-background
-    padding: 15px article-padding 15px 0
-    .gist-file
-      border: none
-      font-family: font-mono
-      margin: 0
-      .gist-data
-        background: none
-        border: none
-        .line-numbers
-          @extend $line-numbers
-          background: none
-          border: none
-          padding: 0 20px 0 0
-        .line-data
-          padding: 0 !important
-      .highlight
-        margin: 0
-        padding: 0
-        border: none
-      .gist-meta
-        background: highlight-background
-        color: highlight-comment
-        font: 0.85em font-sans
-        text-shadow: 0 0
-        padding: 0
-        margin-top: 1em
-        margin-left: article-padding
-        a
-          color: color-link
-          font-weight: normal
-          &:hover
-            text-decoration: underline
+    margin 20px 0
+    table
+      margin 0
+    .highlight
+      background: none !important
 
 pre
   .comment
